# ed2023

./: CMakeLists.txt  README.md
TP1/include/: expressao.h  expression.h  node.h  satisfiability.h  stack.h  tree.h
TP1/src/: expressao.cpp  expression.cpp  main.cpp  node.cpp  satisfiability.cpp  stack.cpp  teste.cpp  tree.cpp
ap02/analisamem/src/: testepilhaindexada.c
ap03/: CMakeLists.txt  c10correto.c  c10relatorio.txt  c11correto.c  c11relatorio.txt  c12correto.c  c12relatorio.txt  c13relatorio.txt  c14relatorio.txt  c15correto.c  c15relatorio.txt  c16correto.c  c16relatorio.txt  c19.c  c19correto.c  c19relatorio.txt  c1correto.c  c1relatorio.txt  c2relatorio.txt  c3correto.c  c3relatorio.txt  c4.c  c4correto.c  c4relatorio.txt  c5correto.c  c5relatorio.txt  c6correto.c  c6relatorio.txt  c7correto.c  c7relatorio.txt  c8relatorio.txt  c9correto.c  c9relatorio.txt
