cmake_minimum_required(VERSION 3.23)
project(ed2023)

set(CMAKE_C_STANDARD 11)

add_executable(ed2023
        TP1/src/expressao.cpp
        TP1/include/expressao.h
        TP1/src/main.cpp
        TP1/src/main.cpp
        TP1/src/main.cpp
        TP1/src/expressao.cpp
        TP1/src/stack.cpp
        TP1/include/stack.h
        TP1/src/expressao.cpp
        TP1/src/expressao.cpp)
